# polaris

./: .gitignore  README.md  pyproject.toml  requirements.txt
polaris/: __init__.py  utils.py
polaris/data/: __init__.py  datasets.py
polaris/experiments/: __init__.py
polaris/metrics/: __init__.py  calibration.py  entropy.py
polaris/models/: __init__.py  baselines.py  depth_baselines.py  external_adapters.py  extra_hetero_baselines.py  hetero_baselines.py  polaris.py  reimpl_baselines.py
polaris/training/: __init__.py  trainer.py
results/: ablation_lambda_gate.txt  depth.txt  entropy_calibration.txt  fair_harness.txt  heterophily.txt  label_bias_coverage.txt  linkx.txt  mechanism.txt  platonov.txt  significance_bias_fagcn.txt  significance_glognn.txt
results/appendix/: appendix4_results.txt  appendix5_results.txt
scripts/: plot_mechanism.py  probe_selectivity.py  run_ablation_significance.py  run_appendix.py  run_appendix2.py  run_appendix3.py  run_appendix4.py  run_appendix5.py  run_bias_alpha_probe.py  run_depth_robustness.py  run_entropy_calibration.py  run_entropy_control.py  run_entropy_favorable.py  run_fair_baselines.py  run_heterophily.py  run_lambda_gate_ablation.py  run_linkx_baseline.py  run_mechanism_plot.py  run_multiclass_real.py  run_multiclass_validation.py  run_platonov.py  run_polaris_e_results.py  run_polaris_vs_glognn_sig.py  run_revision.py  run_signed_reg.py
tests/: test_properties.py
