[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-gnn"
version = "0.1.0"
description = "Polarity- and Selectivity-controlled Graph Attention (POLARIS): entropy-controlled, calibration-aware message passing for GNNs"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["polaris*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
